Thijs Alkemade, Gustavo Grieco, Daniel Stenberg, and Nikos
Mavrogiannopoulos.

** libidn: Added STRINGPREP_ICONV_ERROR error code.

** libidn: Workaround valgrind/gcc/glibc issue.
Valgrind reported a 'Invalid read of size 4' that was caused by
optimized strlen implementation.  Reported and patch by Alessandro
Ghedini <alessandro@ghedini.me>.

** API and ABI is backwards compatible with the previous version.

* Version 1.30 (released 2015-03-02) [stable]

** libidn: The punycode.{c,h} files were re-imported from RFC 3492bis.
A comment explaining the origin and what was changed was added.

** Bump gettext to 0.19.3.

** Use LT_INIT instead of AC_LIBTOOL_WIN32_DLL.

** i18n: Added Hungarian translation.  Updated some other languages.
Thanks to Balázs Úr.

** API and ABI is backwards compatible with the previous version.

* Version 1.29 (released 2014-08-10) [stable]

** libidn: Mark internal variable "g_utf8_skip" as static.
Reported by Thomas Dineen <tdineen@ix.netcom.com>.

** idn: Flush stdout to simplify for tools that buffer too heavily.
Tiny patch from Hugh Daschbach <hugh@ccss.com>.

** i18n: Added Brazilian Portuguese translation.
Thanks to Rafael Ferreira.

** Update gnulib files.

** API and ABI is backwards compatible with the previous version.

* Version 1.28 (released 2013-07-10) [stable]

** idn: Don't crash when string conversion from UTF-8 to locale fails.
Reported by Jeffrey Frey <frey@udel.edu>.

** java: Fix build failures.

** java: TestIDNA -a and -u logic was reversed, now fixed.

** API and ABI is backwards compatible with the previous version.

* Version 1.27 (released 2013-06-05) [stable]

** Java library can be built using Maven.  Speed improvements.
Thanks to several patches from Stefan Larsson.  Testing indicate 70-90
times faster node/name/resource-prep.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.26 (released 2012-12-11) [stable]
