@@ -1,163 +1,152 @@
 # Danish translation of the libidn gettext message catalogue
-# Copyright (C) 2005 Free Software Foundation, Inc.
+# Copyright (C) 2015 Free Software Foundation, Inc.
 # This file is distributed under the same license as the libidn package.
-# Morten Bo Johansen <mbj@spamcop.net>, 2004-2011
+# Morten Bo Johansen <mbj@spamcop.net>, 2004-2011.
+# Joe Hansen <joedalton2@yahoo.dk>, 2015.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: libidn 1.9\n"
+"Project-Id-Version: libidn 1.29\n"
 "Report-Msgid-Bugs-To: bug-libidn@gnu.org\n"
-"POT-Creation-Date: 2008-07-01 18:15+0200\n"
-"PO-Revision-Date: 2011-01-03 17:38+0100\n"
-"Last-Translator: Morten Bo Johansen <mbj@spamcop.net>\n"
+"POT-Creation-Date: 2014-08-10 22:50+0200\n"
+"PO-Revision-Date: 2015-05-01 17:38+0100\n"
+"Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"X-Generator: Jed w/po-mode (http://jedsoft.org)\n"
 
-#: lib/strerror-idna.c:74 lib/strerror-pr29.c:58 lib/strerror-punycode.c:58
-#: lib/strerror-stringprep.c:78 lib/strerror-tld.c:60
+#: lib/strerror-idna.c:82 lib/strerror-pr29.c:66 lib/strerror-punycode.c:66
+#: lib/strerror-stringprep.c:86 lib/strerror-tld.c:68
 msgid "Success"
 msgstr "Lykkedes"
 
-#: lib/strerror-idna.c:78 lib/strerror-pr29.c:66
+#: lib/strerror-idna.c:86 lib/strerror-pr29.c:74
 msgid "String preparation failed"
 msgstr "Dannelse af tekststreng mislykkedes"
 
-#: lib/strerror-idna.c:82
+#: lib/strerror-idna.c:90
 msgid "Punycode failed"
 msgstr "Punycode mislykkedes"
 
-#: lib/strerror-idna.c:86
+#: lib/strerror-idna.c:94
 msgid "Non-digit/letter/hyphen in input"
 msgstr "Ikke-ciffer/bogstav/bindestreg i inddata"
 
-#: lib/strerror-idna.c:90
+#: lib/strerror-idna.c:98
 msgid "Forbidden leading or trailing minus sign (`-')"
 msgstr "Må ikke begynde eller slutte med minustegn (\"-\")"
 
-#: lib/strerror-idna.c:94
+#: lib/strerror-idna.c:102
 msgid "Output would be too large or too small"
 msgstr "Mængden af uddata ville blive for stor eller lille"
 
-#: lib/strerror-idna.c:98
+#: lib/strerror-idna.c:106
 msgid "Input does not start with ACE prefix (`xn--')"
 msgstr "Inddata begynder ikke med et ACE-præfiks (\"xn--\")"
 
-#: lib/strerror-idna.c:102
+#: lib/strerror-idna.c:110
 msgid "String not idempotent under ToASCII"
 msgstr "Tekststreng er ikke idempotent under ToASCII"
 
-#: lib/strerror-idna.c:106
+#: lib/strerror-idna.c:114
 msgid "Input already contain ACE prefix (`xn--')"
 msgstr "Inddata indeholder allerede et ACE-præfiks (\"xn--\")"
 
-#: lib/strerror-idna.c:110 lib/strerror-tld.c:76
+#: lib/strerror-idna.c:118 lib/strerror-tld.c:84
 msgid "System iconv failed"
 msgstr "Systemkald til iconv mislykkedes"
 
-#: lib/strerror-idna.c:114 lib/strerror-stringprep.c:122 lib/strerror-tld.c:72
+#: lib/strerror-idna.c:122 lib/strerror-stringprep.c:130 lib/strerror-tld.c:80
 msgid "Cannot allocate memory"
 msgstr "Kan ikke tildele hukommelse"
 
-#: lib/strerror-idna.c:118
+#: lib/strerror-idna.c:126
 msgid "System dlopen failed"
 msgstr "Systemkald til dlopen mislykkedes"
 
-#: lib/strerror-idna.c:122 lib/strerror-pr29.c:70 lib/strerror-punycode.c:74
-#: lib/strerror-stringprep.c:126 lib/strerror-tld.c:84
+#: lib/strerror-idna.c:130 lib/strerror-pr29.c:78 lib/strerror-punycode.c:82
+#: lib/strerror-stringprep.c:134 lib/strerror-tld.c:92
 msgid "Unknown error"
 msgstr "Ukendt fejl"
 
-#: lib/strerror-pr29.c:62
+#: lib/strerror-pr29.c:70
 msgid "String not idempotent under Unicode NFKC normalization"
 msgstr "Tekststreng er ikke idempotent under Unicode NFKC-normalisering"
 
-#: lib/strerror-punycode.c:62
+#: lib/strerror-punycode.c:70
 msgid "Invalid input"
 msgstr "Ugyldige inddata"
 
-#: lib/strerror-punycode.c:66 lib/strerror-stringprep.c:102
+#: lib/strerror-punycode.c:74 lib/strerror-stringprep.c:110
 msgid "Output would exceed the buffer space provided"
 msgstr "Størrelse på uddata ville overstige tildelt plads i buffer"
 
-#: lib/strerror-punycode.c:70
+#: lib/strerror-punycode.c:78
 msgid "String size limit exceeded"
 msgstr "Grænse for størrelse på tekststreng overskredet"
 
-#: lib/strerror-stringprep.c:82
+#: lib/strerror-stringprep.c:90
 msgid "Forbidden unassigned code points in input"
 msgstr "Der er forbudte, ikke-tildelte kodepunkter i inddata"
 
-#: lib/strerror-stringprep.c:86
+#: lib/strerror-stringprep.c:94
 msgid "Prohibited code points in input"
 msgstr "Der er forbudte kodepunkter i inddata"
 
-#: lib/strerror-stringprep.c:90
+#: lib/strerror-stringprep.c:98
 msgid "Conflicting bidirectional properties in input"
 msgstr "Konflikter mellem tovejsegenskaber i inddata"
 
-#: lib/strerror-stringprep.c:94
+#: lib/strerror-stringprep.c:102
 msgid "Malformed bidirectional string"
 msgstr "Misdannet tovejstekststreng"
 
-#: lib/strerror-stringprep.c:98
+#: lib/strerror-stringprep.c:106
 msgid "Prohibited bidirectional code points in input"
 msgstr "Forbudte tovejskodepunkter i inddata"
 
-#: lib/strerror-stringprep.c:106
+#: lib/strerror-stringprep.c:114
 msgid "Error in stringprep profile definition"
 msgstr "Fejl i definition af stringprep-profil"
 
-#: lib/strerror-stringprep.c:110
+#: lib/strerror-stringprep.c:118
 msgid "Flag conflict with profile"
 msgstr "Konflikt mellem flag og profil"
 
-#: lib/strerror-stringprep.c:114
+#: lib/strerror-stringprep.c:122
 msgid "Unknown profile"
 msgstr "Ukendt profil"
 
-#: lib/strerror-stringprep.c:118
+#: lib/strerror-stringprep.c:126
 msgid "Unicode normalization failed (internal error)"
 msgstr "Normalisering af unicode mislykkedes (intern fejl)"
 
-#: lib/strerror-tld.c:64
+#: lib/strerror-tld.c:72
 msgid "Code points prohibited by top-level domain"
 msgstr "Kodepunkter ikke tilladt af top-domæne"
 
-#: lib/strerror-tld.c:68
+#: lib/strerror-tld.c:76
 msgid "Missing input"
 msgstr "Manglende inddata"
 
-#: lib/strerror-tld.c:80
+#: lib/strerror-tld.c:88
 msgid "No top-level domain found in input"
 msgstr "Fandt ikke et top-domæne i inddata"
 
-#. TRANSLATORS: The placeholder indicates the bug-reporting address
-#. for this package.  Please add _another line_ saying
-#. "Report translation bugs to <...>\n" with the address for translation
-#. bugs (typically your translation team's web or email address).
-#: src/idn.c:68
-#, c-format
-msgid ""
-"\n"
-"Report bugs to <%s>.\n"
-msgstr ""
-"\n"
-"Send fejlrapporter til <%s>.\n"
-
-#: src/idn.c:75
+#: src/idn.c:65
 #, c-format
 msgid "Try `%s --help' for more information.\n"
 msgstr "Prøv \"%s --help\" for yderligere information.\n"
 
-#: src/idn.c:79
+#: src/idn.c:69
 #, c-format
 msgid "Usage: %s [OPTION]... [STRINGS]...\n"
 msgstr "Brug: %s [TILVALG]... [STRENGE]...\n"
 
-#: src/idn.c:82
+#: src/idn.c:72
 msgid ""
 "Internationalized Domain Name (IDN) convert STRINGS, or standard input.\n"
 "\n"
@@ -165,7 +154,7 @@ msgstr ""
 "Internationalized Domain Name (IDN) - omdan STRENGE, eller standardinddata.\n"
 "\n"
 
-#: src/idn.c:86
+#: src/idn.c:76
 msgid ""
 "Command line interface to the internationalized domain name library.\n"
 "\n"
@@ -192,7 +181,7 @@ msgstr ""
 "Obligatoriske parametre som gælder for langforms-tilvalg er ligeledes\n"
 "obligatoriske for kortforms-tilvalg.\n"
 
-#: src/idn.c:98
+#: src/idn.c:88
 msgid ""
 "  -h, --help               Print help and exit\n"
 "  -V, --version            Print version and exit\n"
@@ -202,7 +191,7 @@ msgstr ""
 
 # ACE = ASCII Compatible Encoding
 # IDNA = Internationalizing Domain Names in Applications
-#: src/idn.c:102
+#: src/idn.c:92
 msgid ""
 "  -s, --stringprep         Prepare string according to nameprep profile\n"
 "  -d, --punycode-decode    Decode Punycode\n"
@@ -216,27 +205,27 @@ msgstr ""
 "  -a, --idna-to-ascii      Omdan til ACE ifølge IDNA (standardtilstand)\n"
 "  -u, --idna-to-unicode    Omdan fra ACE ifølge IDNA\n"
 
-#: src/idn.c:109
+#: src/idn.c:99
 msgid ""
-"      --allow-unassigned   Toggle IDNA AllowUnassigned flag\n"
-"      --usestd3asciirules  Toggle IDNA UseSTD3ASCIIRules flag\n"
+"      --allow-unassigned   Toggle IDNA AllowUnassigned flag (default off)\n"
+"      --usestd3asciirules  Toggle IDNA UseSTD3ASCIIRules flag (default off)\n"
 msgstr ""
-"      --allow-unassigned   Slå IDNA AllowUnassigned til/fra\n"
-"      --usestd3asciirules  Slå IDNA UseSTD3ASCIIRules til/fra\n"
+"      --allow-unassigned   Slå IDNA AllowUnassigned til/fra (standard fra)\n"
+"      --usestd3asciirules  Slå IDNA UseSTD3ASCIIRules til/fra (standard fra)\n"
 
-#: src/idn.c:113
+#: src/idn.c:103
 msgid ""
-"  -t, --tld                Check string for TLD specific rules\n"
+"      --no-tld             Don't check string for TLD specific rules\n"
 "                             Only for --idna-to-ascii and --idna-to-unicode\n"
 msgstr ""
-"  -t, --tld                Kontrollér tekststring for TLD-specifikke regler\n"
+"      --no-tld             Kontroller ikke tekststring for TLD-specifikke regler\n"
 "                             Gælder kun --idna-to-ascii og --idna-to-unicode\n"
 
-#: src/idn.c:117
+#: src/idn.c:107
 msgid "  -n, --nfkc               Normalize string according to Unicode v3.2 NFKC\n"
 msgstr "  -n, --nfkc               Normalisér tekststreng i.h.t. Unicode v3.2 NFKC\n"
 
-#: src/idn.c:120
+#: src/idn.c:110
 msgid ""
 "  -p, --profile=STRING     Use specified stringprep profile instead\n"
 "                             Valid stringprep profiles: `Nameprep',\n"
@@ -248,7 +237,7 @@ msgstr ""
 "                             \"iSCSI\", \"Nodeprep\", \"Resourceprep\", \n"
 "                             \"trace\", \"SASLprep\"\n"
 
-#: src/idn.c:126
+#: src/idn.c:116
 msgid ""
 "      --debug              Print debugging information\n"
 "      --quiet              Silent operation\n"
@@ -256,12 +245,12 @@ msgstr ""
 "      --debug              Udskriv fejlsøgnings-information\n"
 "      --quiet              Ingen uddata under udførelse\n"
 
-#: src/idn.c:176
+#: src/idn.c:172
 #, c-format
-msgid "Only one of -s, -e, -d, -a, -u or -n can be specified."
-msgstr "Kun ét af argumenterne -s, -e, -d, -a, -u eller -n kan angives."
+msgid "only one of -s, -e, -d, -a, -u or -n can be specified"
+msgstr "Kun ét af argumenterne -s, -e, -d, -a, -u eller -n kan angives"
 
-#: src/idn.c:184
+#: src/idn.c:182
 #, c-format
 msgid "Charset `%s'.\n"
 msgstr "Tegnsæt \"%s\".\n"
@@ -273,19 +262,19 @@ msgstr "Indtast hver streng på en særskilt linje, afsluttet med et nylinje-teg
 
 #: src/idn.c:202
 #, c-format
-msgid "Input error"
-msgstr "Fejl i inddata"
+msgid "input error"
+msgstr "fejl i inddata"
 
 #: src/idn.c:212 src/idn.c:274 src/idn.c:357 src/idn.c:434 src/idn.c:515
 #, c-format
-msgid "Could not convert from %s to UTF-8."
-msgstr "Kunne ikke omdanne fra %s til UTF-8."
+msgid "could not convert from %s to UTF-8"
+msgstr "kunne ikke omdanne fra %s til UTF-8"
 
 #: src/idn.c:220 src/idn.c:245 src/idn.c:281 src/idn.c:498 src/idn.c:527
 #: src/idn.c:551
 #, c-format
-msgid "Could not convert from UTF-8 to UCS-4."
-msgstr "Kunne ikke omdanne fra UTF-8 til UCS-4."
+msgid "could not convert from UTF-8 to UCS-4"
+msgstr "kunne ikke omdanne fra UTF-8 til UCS-4"
 
 #: src/idn.c:237
 #, c-format
@@ -294,13 +283,18 @@ msgstr "stringprep_profile: %s"
 
 #: src/idn.c:260 src/idn.c:302 src/idn.c:345 src/idn.c:503 src/idn.c:564
 #, c-format
-msgid "Could not convert from UTF-8 to %s."
-msgstr "Kunne ikke omdanne fra UTF-8 til %s."
+msgid "could not convert from UTF-8 to %s"
+msgstr "kunne ikke omdanne fra UTF-8 til %s"
 
 #: src/idn.c:295
 #, c-format
 msgid "punycode_encode: %s"
 msgstr "punycode_encode: %s"
+
+#: src/idn.c:317
+#, c-format
+msgid "malloc"
+msgstr "malloc"
 
 #: src/idn.c:323
 #, c-format
@@ -309,8 +303,8 @@ msgstr "punycode_decode: %s"
 
 #: src/idn.c:340 src/idn.c:364 src/idn.c:442
 #, c-format
-msgid "Could not convert from UCS-4 to UTF-8."
-msgstr "Kunne ikke omdanne fra UCS-4 til UTF-8."
+msgid "could not convert from UCS-4 to UTF-8"
+msgstr "kunne ikke omdanne fra UCS-4 til UTF-8"
 
 #: src/idn.c:381
 #, c-format
@@ -339,5 +333,5 @@ msgstr "idna_to_unicode_8z4z: %s"
 
 #: src/idn.c:540
 #, c-format
-msgid "Could not do NFKC normalization."
-msgstr "Kunne ikke udføre NFKC-normalisering."
+msgid "could not do NFKC normalization"
+msgstr "kunne ikke udføre NFKC-normalisering"
