@@ -38,6 +38,9 @@ Valgrind reported a 'Invalid read of size 4' that was caused by
 optimized strlen implementation.  Reported and patch by Alessandro
 Ghedini <alessandro@ghedini.me>.
 
+** i18n: Updated Danish translation.
+Thanks to Joe Hansen.
+
 ** API and ABI is backwards compatible with the previous version.
 
 * Version 1.30 (released 2015-03-02) [stable]
